tests/fixtures/invalid_programs/type_mismatch.fox
# Program dengan tipe yang tidak cocok
biar x = 5 + "hello"
tulis(x)
